# multi-scale-somatic-coherence

./: .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
mssc/: __init__.py  crep_gate.py
mssc/adapters/: physionet_eeg_adapter.py  physionet_hrv_adapter.py  stub_notice.md
mssc/analysis/: beta_fit.py  coherence_metric.py  null_hypothesis_test.py
mssc/docs/: epistemic_status.md  falsification_log.md
mssc/report/: mssc_report_template.md
mssc/tests/: test_beta_fit.py  test_coherence_metric.py  test_crep_gate.py  test_null_hypothesis.py
mssc/tip/docs/: epistemic_boundaries.md
mssc/tip/harness/: session_runner.py
mssc/tip/manipulations/: contradiction_injection.py  gap_injection.py  temporal_shuffle.py
mssc/tip/metrics/: consistency_scorer.py
mssc/tip/report/: tip_report_template.py
mssc/tip/tests/: test_consistency_scorer.py  test_manipulations.py
scripts/: validate_runtime.py
tip/: __init__.py
tip/harness/: session_runner.py
tip/manipulations/: contradiction_injection.py  gap_injection.py  temporal_shuffle.py
tip/metrics/: consistency_scorer.py
tip/report/: tip_report_template.py
tip/tests/: test_consistency_scorer.py  test_manipulations.py
