[project]
name = "genesis-mssc"
version = "0.1.0"
description = "Multi-Scale Somatic Coherence (MSSC) + Temporal Integrity Probe (TIP) — exploratory GenesisAeon research module"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Römer, Johann", email = "joberoemer@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "GenesisAeon",
    "MSSC",
    "TIP",
    "EEG",
    "HRV",
    "physiological coherence",
    "somatic coherence",
    "UTAC",
    "CREP",
    "open science",
    "genesis-os",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "pydantic>=2.7",
    "wfdb>=4.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/GenesisAeon/multi-scale-somatic-coherence"
Repository = "https://github.com/GenesisAeon/multi-scale-somatic-coherence"
Issues = "https://github.com/GenesisAeon/multi-scale-somatic-coherence/issues"
Zenodo = "https://doi.org/10.5281/zenodo.PLACEHOLDER"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mssc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]  # typer uses function calls in defaults

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]       # allow assert in tests
"mssc/tests/**" = ["S101"]
"mssc/tip/tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests", "mssc/tests", "mssc/tip/tests"]
addopts = "--cov=mssc --cov-report=term-missing -v"

[tool.coverage.run]
source = ["mssc"]
omit = ["tests/*", "mssc/tests/*", "mssc/tip/tests/*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
